# mmo-rk-1

./: .gitignore  README.md  co2.ipynb  main.py
hw/: README.md  build_report.py  dataset_prep.py  early_stop_next.py  experiment.py  loss_function_comparison.ipynb  main.py  pyproject.toml  Горкунов Н.М. ИУ5-21М ММО ДЗ loss functions.docx
mmo-rk-1/: .gitignore  pyproject.toml  task.txt
mmo-rk-1/results/: co2_emissions_with_mean_encoding.csv
mmo-rk-1/scripts/: create_pdf_report.py
results/: mean_encoding_by_make.csv  summary.txt
